[tool.poetry]
name = "backend"
version = "1.0.0"
description = ""
authors = ["Nicolas Hernandez <n44hernandezp>@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
flask-jwt-extended = "^3.24.1"
flask-smorest = "^0.24.1"
flask-socketio = "^4.3.1"
pillow = "^7.2.0"
gunicorn = {version = "^20.0.4", optional = true}
gevent = {version = "^20.6.2", optional = true}
gevent-websocket = {version = "^0.10.1", optional = true}
confuse = "^1.3.0"
Flask-HTTPAuth = "^4.2.0"
flask-mongoengine = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "~5.0.1"
flake8 = "^3.7.9"
mypy = "^0.761"
black = "^19.10b0"
pytest-cov = "^2.8.1"
rope = "^0.16.0"
pylint = "^2.4.4"
pytz = "^2020.1"

[tool.poetry.scripts]
openapi = 'backend.app:generate_openapi'

[tool.poetry.extras]
gunicorn = ["gunicorn", "gevent", "gevent-websocket"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"